--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,13 +49,13 @@ body {
   border-bottom: 1px solid black;
 }
 .section {
-  padding: 60px 0px 0px 11.81%;
+  padding: 60px 11.81% 0px 11.81%;
 }
 .pdf-button {
   padding: 10px 150px;
 }
 .section-banner {
-  padding: 180px 0px 0px 11.81%;
+  padding: 180px 11.81% 0px 11.81%;
   background-image: url("ofs-2021-3.jpeg");
   background-repeat: no-repeat;
   height: 1000px;
