--- a/app/views/tours/step3.html.erb
+++ b/app/views/tours/step3.html.erb
@@ -12,7 +12,7 @@
         <small class="text-muted">(note that the display is approximate)</small>
       </h2>
       <div class="col-6" style="padding-top: 200px">
-        <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/Floorplan_Branded.jpg", style: 'width: 700px; padding-right: 20px' %>
+        <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/Floorplan_Branded.jpg", style: 'width: 100%; padding-right: 20px' %>
       </div>
       <div class="col-6" style="padding-top: 200px">
         <div class="row no-gutters">
@@ -26,7 +26,7 @@
         </div>
         <div class="row no-gutters">
           <div class="col-12">
-            <a id="first_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.first_image}", style: 'width: 700px' %></a>
+            <a id="first_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.first_image}", style: 'width: 100%' %></a>
           </div>
         </div>
           <div class="row no-gutters pt-5">
