--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@ $primary: #981c1e;
 $white: #fff;
 $secondary: #000000;
 body {
-  font-family: "Raleway,sans-serif";
+  font-family: "Muli", sans-serif;
 }
 .btn {
   padding: 7px 14px;
