--- a/app/views/tours/step4.html.erb
+++ b/app/views/tours/step4.html.erb
@@ -24,7 +24,11 @@
         <div class="row no-gutters">
           <div class="col-2">
             <span id="lot_modal_link" class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
+              <% if @tour.lot_or_main == true%>
               LOT <%= @tour.lot_maint %> SF
+              <% else %>
+              MAINT <%= @tour.lot_maint %>
+              <% end %>
             </span>
           </div>
           <div class="col-2">
