--- a/app/views/tours/step1.html.erb
+++ b/app/views/tours/step1.html.erb
@@ -1,63 +1,69 @@
 <%= render 'layouts/navigation'%>
-<% max_photos = 15 %>
-<section class="section">
-  <div class="container m-0 p-0">
-    <div class="row no-gutters text-left">
-      <div class="col-12 ">
-        <%= render '/layouts/steps', tour: @tour %>
-        <h2 class="mt-3">
-          Please Select <%= max_photos %> Photos
-          <small class="text-muted">(to be used for brochure photos)</small>
-        </h2>
+<section class="section mb-5">
+  <div class="container p-0 m-0">
+    <div class="row no-gutters">
+      <div class="col-12">
+        <%= render '/layouts/steps', tour: @tour%>
+        <h1 class="mt-3">Selecte theme </h1>
       </div>
-    </div>
-    <div class="row no-gutters mt-5">
-      <% @tour.images.each do |image| %>
-        <div data-image-id="<%= image.name %>" class="col-3 my-2 card p-0 tour-image">
-          <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{image.name}", class:"w-100 h-100 card-img-top #{'selected-image' if @tour.selected_images.include?(image.name)}  "%>
+      <%= form_for @tour, url: wizard_path(:step2, :tour_id => @tour.id), method: :put do |f| %>
+        <%=  f.hidden_field :selected_theme  %>
+        <div class="row no-gutters">
+          <div class="col-2">
+          </div>
+          <div class="col-4 mt-3 ">
+            <div class="card <%= 'selected-theme' if @tour.selected_theme == 'dark' %> theme-column dark" style="width: 100%;">
+              <img class="card-img-top" src="<%= asset_path('pdf_sample.png') %>" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Dark Theme</h5>
+                <ul>
+                  <li>Dark background color</li>
+                  <li>White font</li>
+                </ul>
+                <%= link_to "Download Sample", download_path, class:'btn btn-primary', target: "_blank"%>
+              </div>
+            </div>
+          </div>
+          <div class="col-4 mt-3">
+            <div class="card theme-column white <%= 'selected-theme' if @tour.selected_theme == 'white' %>" style="width: 100%;">
+              <img class="card-img-top" src="<%= asset_path('pdf_sample.png') %>" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Light Theme</h5>
+                <ul>
+                  <li>White background color</li>
+                  <li>Dark font</li>
+                </ul>
+                <%= link_to "Download Sample", download_path, class:'btn btn-primary', target: "_blank"%>
+              </div>
+            </div>
+          </div>
+          <div class="col-2">
+          </div>
+      <div class="col-3"></div>
+      <div class="col-6 text-center mt-5">
+        <%= f.submit 'Next Step', class:'btn btn-primary theme-step-button w-100' %>
+      </div>
+      <div class="col-3"></div>
         </div>
       <% end %>
-    </div>
-    <div class="row no-gutters text-left mb-5">
-      <div class="col-4 mt-4">
-      </div>
-      <div class="col-6 mt-5">
-      <%= form_for @tour, url: wizard_path(:step2, :tour_id => @tour.id), method: :put do |f| %>
-        <%=  f.hidden_field :selected_images  %>
-        <%=  f.submit "Next Step", class: 'btn btn-primary w-100 to-step2-button' %>
-      <% end %>
-      <p class="text-center mt-2">You can always edit the images</p>
-      </div>
-      <div class="col-4 mt-4">
-      </div>
     </div>
   </div>
 </section>
 <script>
-  MAX_IMAGE_COUNT = <%= max_photos %>;
-  topSelectedImages = <%= raw @tour.selected_images %>;
   document.addEventListener("turbolinks:load", function() {
-    $('.to-step2-button').on("click", function(e) {
-      if($('.selected-image').length < MAX_IMAGE_COUNT) {
-        e.preventDefault()
-        alert(`please selecte ${MAX_IMAGE_COUNT} images`)
+    $(".theme-column").on("click", function() {
+      if(!$(this).hasClass("selected-theme")) {
+        $(this).addClass("selected-theme");
+        $('.theme-column').not($(this)).removeClass("selected-theme")
+        $('#tour_selected_theme').val()
       }
-    })
-    $(".tour-image").on("click", function() {
-      const imageId = $(this).data("image-id");
-        if($(this).hasClass("selected-image")) {
-          const index = topSelectedImages.indexOf(imageId);
-          topSelectedImages.splice(index, 1);
-          $(this).removeClass("selected-image");
-        } else {
-          if(topSelectedImages.length >= MAX_IMAGE_COUNT) {
-            alert(`Please select no more than ${MAX_IMAGE_COUNT} images`);
-          } else {
-            topSelectedImages.push(imageId);
-            $(this).addClass("selected-image");
-          }
-        }
-        $("#tour_selected_images").val(topSelectedImages.join(","));
+    });
+    $(".theme-step-button").on("click", function() {
+      if($(".selected-theme").hasClass("dark")) {
+        $('#tour_selected_theme').val("dark")
+      } else {
+        $('#tour_selected_theme').val("white")
+      }
     });
   });
 </script>
