--- a/app/views/tours/step4.html.erb
+++ b/app/views/tours/step4.html.erb
@@ -6,151 +6,17 @@
         <%= render '/layouts/steps', tour: @tour%>
       </div>
     </div>
-    <div class="row no-gutters <%= @tour.selected_theme == 'dark' ? 'bg-black' : ''%>">
-      <div class="col-6" style="padding-top: 200px">
-        <div class="row no-gutters">
-          <h1 class="<%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.listing_address %></h1>
-        </div>
-        <div class="row no-gutters">
-          <span id="price_modal_link" class="text-decoration-underline modal-link">
-            LISTED FOR<h1 class="d-inline-block pl-4 <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.price %></h1>
-          </span>
-        </div>
-        <div class="row no-gutters">
-          <span id="description_modal_link" class="text-decoration-underline modal-link">
-            <p class="<%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.description %></p>
-          </span>
-        </div>
-        <div class="row no-gutters">
-          <div class="col-2">
-            <span id="lot_modal_link" class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
-              <% if @tour.lot_or_maint == true%>
-              LOT <%= @tour.lot_maint %> SF
-              <% else %>
-              MAINT $<%= @tour.lot_maint %>
-              <% end %>
-            </span>
-          </div>
-          <div class="col-2">
-            <span id="size_modal_link" class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
-              SIZE <%= @tour.size %> SF
-            </span>
-          </div>
-          <div class="col-2">
-            <span id="bedrooms_modal_link" class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
-              <%= @tour.bedrooms %> BED
-            </span>
-          </div>
-          <div class="col-2">
-            <span id="bathrooms_modal_link" class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
-              <%= @tour.bathrooms %> BATH
-            </span>
-          </div>
-          <div class="col-2">
-            <span id="tax_modal_link" class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
-              TAXES $<%= @tour.tax %>
-            </span>
-          </div>
-        </div>
-        <div class="row no-gutters">
-          <div class="col-12">
-            <a href="javascript:void(0);" id="second_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.second_image}", style: 'width: 100%' %></a>
-          </div>
-        </div>
-        <div class="row no-gutters">
-          <div class="col-4">
-            <a href="javascript:void(0);" id="third_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.third_image}", style: 'width: 100%' %></a>
-          </div>
-          <div class="col-4">
-            <a href="javascript:void(0);" id="fourth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fourth_image}", style: 'width: 100%' %></a>
-          </div>
-          <div class="col-4">
-            <a href="javascript:void(0);" id="fifth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fifth_image}", style: 'width: 100%' %></a>
-          </div>
-        </div>
+    <div class="row no-gutters mt-5">
+      <div class="col-3"></div>
+      <div class="col-6 text-center">
+        <%= link_to "Send to Cotala for Printing", create_path(:tour_id => @tour.id), class:'btn btn-primary pdf-button', :data => {disable_with: "Generating PDF ..."} %>
       </div>
-      <div class="col-6" style="padding-top: 200px">
-        <div class="row no-gutters">
-          <div class="col-12" >
-            <a href="javascript:void(0);" id="sixth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.sixth_image}", style: 'width: 100%' %></a>
-          </div>
-        </div>
-        <div class="row no-gutters">
-          <div class="col-4">
-            <a href="javascript:void(0);" id="seventh_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.seventh_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
-          </div>
-          <div class="col-4">
-            <a href="javascript:void(0);" id="eighth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.eighth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
-          </div>
-          <div class="col-4">
-            <a href="javascript:void(0);" id="ninth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.ninth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
-          </div>
-        </div>
-        <div class="row no-gutters">
-          <div class="col-4">
-            <a href="javascript:void(0);" id="tenth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.tenth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
-          </div>
-          <div class="col-4">
-            <a href="javascript:void(0);" id="eleventh_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.eleventh_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
-          </div>
-          <div class="col-4">
-            <a href="javascript:void(0);" id="twelfth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.twelfth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
-          </div>
-        </div>
-        <div class="row no-gutters">
-          <div class="col-4">
-            <a href="javascript:void(0);" id="thirteenth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.thirteenth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
-          </div>
-          <div class="col-4">
-            <a href="javascript:void(0);" id="fourteenth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fourteenth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
-          </div>
-          <div class="col-4">
-            <a href="javascript:void(0);" id="fifteenth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fifteenth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
-          </div>
-        </div>
-      </div>
+      <div class="col-3"></div>
     </div>
-    <div class="row no-gutters text-center mt-5">
-      <div class="col-6">
-        <%= link_to 'Next Step', wizard_path(:step5, :tour_id => @tour.id), class: 'btn btn-primary theme-step-button w-100' %>
-      </div>
+    <div class="row no-gutters mt-5">
+      <div class="col-3"></div>
+
+      <div class="col-3"></div>
     </div>
   </div>
-</div>
 </section>
-<%= render 'tours/second_page/description_modal', tour: @tour %>
-<%= render 'tours/second_page/price_modal', tour: @tour %>
-<%= render 'tours/second_page/lot_modal', tour: @tour %>
-<%= render 'tours/second_page/size_modal', tour: @tour %>
-<%= render 'tours/second_page/bedrooms_modal', tour: @tour %>
-<%= render 'tours/second_page/bathrooms_modal', tour: @tour %>
-<%= render 'tours/second_page/tax_modal', tour: @tour %>
-
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "second_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "third_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "fourth_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "fifth_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "sixth_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "seventh_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "eighth_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "ninth_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "tenth_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "eleventh_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "twelfth_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "thirteenth_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "fourteenth_image" %>
-<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "fifteenth_image" %>
-
-
-<script>
-  document.addEventListener("turbolinks:load", function() {
-    $('.modal-link').on("click", function() {
-      const modalId = $(this)[0].id.replace('_link','');
-      console.log(modalId, 'modalId')
-      $(`#${modalId}`).modal('show')
-    })
-    $('#images_modal_link').on("click", function() {
-      $('#images_modal').modal('show')
-    });
-  })
-</script>
