--- a/app/views/layouts/_steps.html.erb
+++ b/app/views/layouts/_steps.html.erb
@@ -1,18 +1,13 @@
-<div class="container m-0 p-0">
-  <div class="row no-gutters">
-    <div class="col-sm">
-    <% p step %>
-    <% p 'step' %>
+<div class="">
+  <ul class="navbar-nav">
+    <li class="nav-item">
       <%= link_to 'step one', wizard_path(:step1, tour_id: @tour.id), class:"btn step #{step == :step1 || step.nil? ? 'btn-primary': 'btn-light'}" ,data: { turbolinks: false } %>
-    </div>
-    <div class="col-sm">
+    </li>
+    <li class="nav-item">
       <%= link_to 'step two', wizard_path(:step2, tour_id: @tour.id), class:"btn step #{step == :step2 ? 'btn-primary': 'btn-light'}",data: { turbolinks: false }  %>
-    </div>
-    <div class="col-sm">
+    </li>
+    <li class="nav-item">
       <%= link_to 'step three', wizard_path(:step3, tour_id: @tour.id), class:"btn step #{step == :step3 ? 'btn-primary': 'btn-light'}",data: { turbolinks: false }  %>
-    </div>
-    <div class="col-sm">
-      <%= link_to 'step four', wizard_path(:step4, tour_id: @tour.id), class:"btn step #{step == :step4 ? 'btn-primary': 'btn-light'}",data: { turbolinks: false }  %>
-    </div>
-  </div>
+    </li>
+  </ul>
 </div>
