--- a/app/views/tours/step1.html.erb
+++ b/app/views/tours/step1.html.erb
@@ -1,69 +1,86 @@
 <%= render 'layouts/navigation'%>
 <section class="section mb-5">
   <div class="container p-0 m-0">
-    <div class="row no-gutters">
-      <div class="col-12">
-        <%= render '/layouts/steps', tour: @tour%>
-        <h1 class="mt-3">Selecte theme </h1>
-      </div>
-      <%= form_for @tour, url: wizard_path(:step2, :tour_id => @tour.id), method: :put do |f| %>
-        <%=  f.hidden_field :selected_theme  %>
-        <div class="row no-gutters">
-          <div class="col-2">
-          </div>
-          <div class="col-4 mt-3 ">
-            <div class="card <%= 'selected-theme' if @tour.selected_theme == 'dark' %> theme-column dark" style="width: 100%;">
-              <img class="card-img-top" src="<%= asset_path('pdf_sample.png') %>" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Dark Theme</h5>
-                <ul>
-                  <li>Dark background color</li>
-                  <li>White font</li>
-                </ul>
-                <%= link_to "Download Sample", download_path, class:'btn btn-primary', target: "_blank"%>
-              </div>
-            </div>
-          </div>
-          <div class="col-4 mt-3">
-            <div class="card theme-column white <%= 'selected-theme' if @tour.selected_theme == 'white' %>" style="width: 100%;">
-              <img class="card-img-top" src="<%= asset_path('pdf_sample.png') %>" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Light Theme</h5>
-                <ul>
-                  <li>White background color</li>
-                  <li>Dark font</li>
-                </ul>
-                <%= link_to "Download Sample", download_path, class:'btn btn-primary', target: "_blank"%>
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-          </div>
-      <div class="col-3"></div>
-      <div class="col-6 text-center mt-5">
-        <%= f.submit 'Next Step', class:'btn btn-primary theme-step-button w-100' %>
-      </div>
-      <div class="col-3"></div>
-        </div>
+    <div class="row no-gutters <%= @tour.selected_theme == 'dark' ? 'bg-black' : ''%>">
+      <h2 class="<%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
+        Click on the different photos or text to customize
+        <small class="text-muted <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">(note that the display is approximate)</small>
+      </h2>
+      <div class="col-6" style="padding-top: 200px">
+      <% if Faraday.head("https://www.cotala.com/tours/#{@tour.cotala_tour_id}/Floorplan_Branded.jpg").status == 200 %>
+        <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/Floorplan_Branded.jpg", style: 'width: 100%; padding-right: 20px' %>
+      <% else %>
+        <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/FullPublic.jpg", style: 'width: 100%; padding-right: 20px' %>
       <% end %>
+      </div>
+      <div class="col-6" style="padding-top: 200px">
+        <div class="row no-gutters">
+          <div class="col-6" >
+            <h6 class="<%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">Listing Features</h6>
+            <span id="address_modal_link" class="text-decoration-underline <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.listing_address %></span>
+          </div>
+          <div class="col-6" style="text-align: right">
+            <%= image_tag @tour.agent_logo_url, style: "width:200px; height: 100px; margin-bottom: 20px" if @tour.agent_logo_url %>
+          </div>
+        </div>
+        <div class="row no-gutters">
+          <div class="col-12">
+          <% if @tour.first_image.nil? %>
+            <a id="first_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>" alt="Card image cap"></a>
+          <% else %>
+            <a id="first_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.first_image}", style: 'width: 100%' %></a>
+          <% end %>
+          </div>
+        </div>
+          <div class="row no-gutters pt-4">
+          <div class="col-4">
+            <%= image_tag @tour.agent_headshot_url, style: "width:150px; height: 150px; border-radius: 50%;margin-left: 30px" if @tour.agent_headshot_url.present? %>
+          </div>
+          <div class="col-5">
+            <span id="agent_name_modal_link" class="d-block text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.agent_name %> </span>
+            <% if @tour.prec == true %>
+              <span class="d-block <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">Personal Real Estate Corporation</span>
+            <% end %>
+            <span id="agent_phone_modal_link" class="d-block text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.agent_phone %></span>
+            <span id="agent_email_modal_link" class="d-block text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.agent_email %></span>
+            <span id="agent_url_modal_link" class="d-block text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.agent_url %></span>
+          </div>
+          <div class="col-3">
+            <%= image_tag @tour.broker_logo, style: 'width: 100%;margin-top: 60px' %>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row no-gutters text-center mt-5">
+      <div class="col-6">
+        <%= link_to 'Next Step', wizard_path(:step2, :tour_id => @tour.id), class: 'btn btn-primary theme-step-button w-100',data: { turbolinks: false } %>
+      </div>
     </div>
   </div>
 </section>
+<%= render 'tours/first_page/images_modal', tour: @tour %>
+<%= render 'tours/first_page/address_modal', tour: @tour %>
+<%= render 'tours/first_page/agent_email_modal', tour: @tour %>
+<%= render 'tours/first_page/agent_url_modal', tour: @tour %>
+<%= render 'tours/first_page/agent_phone_modal', tour: @tour %>
+<%= render 'tours/first_page/agent_name_modal', tour: @tour %>
+
+<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "first_image" %>
+<%= render 'tours/third_step/image_modal', tour: @tour, image_id: "second_image" %>
+
+
 <script>
   document.addEventListener("turbolinks:load", function() {
-    $(".theme-column").on("click", function() {
-      if(!$(this).hasClass("selected-theme")) {
-        $(this).addClass("selected-theme");
-        $('.theme-column').not($(this)).removeClass("selected-theme")
-        $('#tour_selected_theme').val()
-      }
+    $('.modal-link').on("click", function() {
+      const modalId = $(this)[0].id.replace('_link','');
+      $(`#${modalId}`).modal('show')
+    })
+    $('#images_modal_link').on("click", function() {
+      $('#images_modal').modal('show')
     });
-    $(".theme-step-button").on("click", function() {
-      if($(".selected-theme").hasClass("dark")) {
-        $('#tour_selected_theme').val("dark")
-      } else {
-        $('#tour_selected_theme').val("white")
-      }
-    });
-  });
+    $('#address_modal_link').on("click", function() {
+      $('#address_modal').modal('show')
+    })
+  })
 </script>
