--- a/app/views/tours/step2.html.erb
+++ b/app/views/tours/step2.html.erb
@@ -8,7 +8,7 @@
         </div>
         <div class="row no-gutters">
           <span id="price_modal_link" class="text-decoration-underline modal-link">
-            LISTED FOR<h1 class="d-inline-block pl-4 <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.price %></h1>
+            LISTED FOR<h1 class="d-inline-block pl-4 <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">$<%= @tour.price %></h1>
           </span>
         </div>
         <div class="row no-gutters">
