--- a/app/views/layouts/_steps.html.erb
+++ b/app/views/layouts/_steps.html.erb
@@ -1,13 +1,13 @@
 <div class="">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <%= link_to 'step one', wizard_path(:step1, tour_id: @tour.id), class:"btn step #{step == :step1 || step.nil? ? 'btn-primary': 'btn-light'}" ,data: { turbolinks: false } %>
+      <%= link_to 'step 1', wizard_path(:step1, tour_id: @tour.id), class:"btn step #{step == :step1 || step.nil? ? 'btn-primary': 'btn-light'}" ,data: { turbolinks: false } %>
     </li>
     <li class="nav-item">
-      <%= link_to 'step two', wizard_path(:step2, tour_id: @tour.id), class:"btn step #{step == :step2 ? 'btn-primary': 'btn-light'}",data: { turbolinks: false }  %>
+      <%= link_to 'step 2', wizard_path(:step2, tour_id: @tour.id), class:"btn step #{step == :step2 ? 'btn-primary': 'btn-light'}",data: { turbolinks: false }  %>
     </li>
     <li class="nav-item">
-      <%= link_to 'step three', wizard_path(:step3, tour_id: @tour.id), class:"btn step #{step == :step3 ? 'btn-primary': 'btn-light'}",data: { turbolinks: false }  %>
+      <%= link_to 'step 3', wizard_path(:step3, tour_id: @tour.id), class:"btn step #{step == :step3 ? 'btn-primary': 'btn-light'}",data: { turbolinks: false }  %>
     </li>
   </ul>
 </div>
