--- a/app/views/tours/step3.html.erb
+++ b/app/views/tours/step3.html.erb
@@ -2,16 +2,20 @@
 <section class="section mb-5">
   <div class="container p-0 m-0">
     <div class="row no-gutters mt-5">
-      <div class="col-3"></div>
+      <div class="col-3 text-center">
+        <%= link_to "Preview", preview_path(:tour_id => @tour.id), class:'btn btn-primary pdf-button', :data => {disable_with: "Previewing PDF ..."} %>
+      </div>
       <div class="col-6 text-center">
-        <%= link_to "Send to Cotala for Printing", create_path(:tour_id => @tour.id), class:'btn btn-primary pdf-button', :data => {disable_with: "Generating PDF ..."} %>
+        <%= link_to "Approve for Printing", create_path(:tour_id => @tour.id), class:'btn btn-primary pdf-button', :data => {disable_with: "Generating PDF ..."} %>
       </div>
       <div class="col-3"></div>
     </div>
     <div class="row no-gutters mt-5">
       <div class="col-3"></div>
-
       <div class="col-3"></div>
     </div>
   </div>
 </section>
+<script>
+
+</script>
