Change database config

--- a/app/views/tours/step3.html.erb
+++ b/app/views/tours/step3.html.erb
@@ -1,5 +1,5 @@
 <%= render 'layouts/navigation'%>
-<section class="section mb-5">
+<section class="section mb-5" data-turbolinks="false">
   <div class="container p-0 m-0">
     <div class="row no-gutters mt-5">
       <div class="col-3 text-center">
@@ -16,6 +16,3 @@
     </div>
   </div>
 </section>
-<script>
-
-</script>
